--- a/VibeMeet_app/templates/register.html
+++ b/VibeMeet_app/templates/register.html
@@ -7,7 +7,7 @@
     <div class="global-container">
         <div class="card login-form">
         <div class="card-body">
-            <h3 class="card-title text-center">Register in to Django</h3>
+            <h3 class="card-title text-center">Register to Join</h3>
             <div class="card-text">
                 {% if messages %}
                 
